--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <p>Supplementary videos for the poster</p>
     <p>======================================================================</p>
 	<p>Video 1. Qualitative performance of models <button onclick="window.open('files/performance.mp4')">click</button> </p>
-	<p>Video 2. Future work: Incorporating biomechanics <button onclick="window.open('files/biomechanics.mp4')">click</button> </p>
-    <p>Video 3. Future work: Monocular video <button onclick="window.open('files/monocular_outdoor.mp4')">click</button> </p>
+	<p>Video 2. Pipeline in clinical environment <button onclick="window.open('files/performance_clinic.mp4')">click</button> </p>
+	<p>Video 3. Future work: Incorporating biomechanics <button onclick="window.open('files/biomechanics.mp4')">click</button> </p>
+    	<p>Video 4. Future work: Monocular video <button onclick="window.open('files/monocular_outdoor.mp4')">click</button> </p>
+	<p>Video 5. Future work: Clinical application of monocular video <button onclick="window.open('files/monocular_clinic.mp4')">click</button> </p>
 
 </body>
 </html>
