--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
 	<title>My Simple Homepage</title>
@@ -32,5 +32,20 @@
     	<p>Video 4. Future work: Monocular video <button onclick="window.open('files/monocular_outdoor.mp4')">click</button> </p>
 	<p>Video 5. Future work: Clinical application of monocular video <button onclick="window.open('files/monocular_clinic.mp4')">click</button> </p>
 
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Main Page</title>
+</head>
+<body>
+    <h1>Main Page</h1>
+    <p>Welcome to the main page. Please choose a poster to view:</p>
+    <ul>
+        <li><a href="poster1.html">Poster 1</a></li>
+        <li><a href="poster2.html">Poster 2</a></li>
+    </ul>
 </body>
 </html>
